--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -5,6 +5,15 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h2>This is a going to be a travel app!</h2>
+    <main>
+        <section id="hero-banner">
+            <h1>White's Adventures</h1>
+        </section>
+        <section id="form-section">
+
+        </section>
+        <section id="travel-log">
+
+        </section>
+    </main>
 </body>
