--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <head>
-    <title>Travel App</title>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <title>Travel App</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-    <main>
-        <section id="hero-banner">
-            <h1>White's Adventures</h1>
-        </section>
-        <section id="form-section">
-
-        </section>
-        <section id="travel-log">
-
-        </section>
-    </main>
+  <main>
+    <section id="hero-banner">
+      <h1>READY, <strong>ADVENTURE</strong>, GO!</h1>
+      <div class="call-to-action">
+        <image class="arrow-icon" src="../media/static/double_arrow.png" alt="arrow"> 
+        <h2>Start your adventure</h2> 
+        <image class="arrow-icon" src="../media/static/double_arrow.png" alt="arrow"></image>
+      </div>
+    </section>
+    <section id="form-section"></section>
+    <section id="travel-log"></section>
+  </main>
 </body>
