style: styled the hero banner for desktop screen size

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -3,5 +3,7 @@
 body {
   margin: 0;
   //background-color: #fff;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Roboto", sans-serif;
+  //font-family: "Trebuchet MS";
+  //font-family: "Courier New";
 }
