--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,14 +3,17 @@
   <title>Travel App</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
   <main>
     <section id="hero-banner">
-      <h1>READY, <strong>ADVENTURE</strong>, GO!</h1>
+      <h1>READY <em><strong>ADVENTURE</strong></em> GO</h1>
+      <!-- <h1><em><strong>ADVENTURE</strong></em></h1> -->
       <div class="call-to-action">
         <image class="arrow-icon" src="../media/static/double_arrow.png" alt="arrow"> 
-        <h2>Start your adventure</h2> 
+        <h2>Start yours today</h2> 
         <image class="arrow-icon" src="../media/static/double_arrow.png" alt="arrow"></image>
       </div>
     </section>
