--- a/src/client/styles/hero.scss
+++ b/src/client/styles/hero.scss
@@ -27,14 +27,23 @@ $delay-Time: 4s;
   align-items: center;
   flex-direction: column;
   color: #fff;
+  transform: scaleX(-1);
 
   h1 {
-    font-size: 10em;
+    transform: scaleX(-1);
+    font-size: 16em;
     opacity: 1;
-    margin: 0 0 10vh 0;
+    // margin: 0 0 10vh 0;
+    font-weight: 300;
     //background-color: royalblue;
     animation-name: fadeIn;
     animation-duration: $delay-Time;
+    padding: 0;
+    margin: 0;
+    line-height: 1em;
+    text-align: left;
+    width: 90vw;
+    // border: 2px blue solid;
   }
 
   div {
@@ -43,20 +52,26 @@ $delay-Time: 4s;
     width: 32vw;
     // border: rgb(15, 15, 15) 2px solid;
     align-items: center;
+    // margin: 0 0 5vh 0;
+    transform: scaleX(-1);
 
     animation-name: flash;
     animation-duration: 3s;
-    animation-delay: $delay-Time;
+    animation-delay: 2s;
     animation-iteration-count: infinite;
     opacity: 0;
+    margin: 0;
+    // border: 2px blue solid;
 
     img {
-      height: 2.5em;
+      height: 3em;
       width: auto;
     }
 
     h2 {
-      font-size: 3.5em;
+      font-size: 3em;
+      font-weight: 300;
+      margin: 0;
     }
   }
 }
