--- a/src/client/styles/variables.scss
+++ b/src/client/styles/variables.scss
@@ -5,3 +5,5 @@ $mobileLarge: 425px;
 $tablet: 768px;
 $small-laptop: 1024px;
 $medium-laptop: 1330px;
+$large-laptop: 1540px;
+$superlarge-screen: 2027px;
