--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -13,7 +13,7 @@
       <!-- <h1><em><strong>ADVENTURE</strong></em></h1> -->
       <div class="call-to-action">
         <image class="arrow-icon" src="../media/static/double_arrow.png" alt="arrow"> 
-        <h2>Start yours today</h2> 
+        <h2>Start exploring</h2> 
         <image class="arrow-icon" src="../media/static/double_arrow.png" alt="arrow"></image>
       </div>
     </section>
