feature: added a form section to webpage
form section is the size of the screen, it has a simple form with
Destination and date fields, some labels and a search button. The form
has been styled for mobile devices so far.

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -17,7 +17,15 @@
         <image class="arrow-icon" src="../media/static/double_arrow.png" alt="arrow"></image>
       </div>
     </section>
-    <section id="form-section"></section>
+    <section id="form-section">
+      <form class="shadow">
+        <label for="destination">Destination</label>
+        <input id="destination" type="text">
+        <label for="date">Date</label>
+        <input id="date" type="date">
+        <button>Search</button>
+      </form>
+    </section>
     <section id="travel-log"></section>
   </main>
 </body>
