--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -1,4 +1,5 @@
-@import "hero.scss";
+@use 'hero';
+@use 'formSection';
 
 body {
   margin: 0;
@@ -7,3 +8,8 @@ body {
   //font-family: "Trebuchet MS";
   //font-family: "Courier New";
 }
+
+.shadow{
+  box-shadow: 3px 4px 30px 5px rgba(138,133,138,1);
+}
+
