--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -18,11 +18,16 @@
       </div>
     </section>
     <section id="form-section">
+      <h2>Where do <em>you</em> want to go?</h2>
       <form class="shadow">
-        <label for="destination">Destination</label>
-        <input id="destination" type="text">
-        <label for="date">Date</label>
-        <input id="date" type="date">
+        <div id="dest-div">
+          <label for="destination">Destination</label>
+          <input id="destination" type="text">
+        </div>
+        <div id="date-div">
+          <label for="date">Date</label>
+          <input id="date" type="date">
+        </div>
         <button>Search</button>
       </form>
     </section>
