feat: smooth scroll to form section when call to action clicked
When the user clicked the call to action div the page scrolls smoothly
to the form section. This is achieved with a click listening in the
app.js file

--- a/src/client/styles/hero.scss
+++ b/src/client/styles/hero.scss
@@ -51,6 +51,7 @@ $delay-Time: 4s;
   }
 
   div {
+    cursor: pointer;
     transform: scaleX(-1);
     display: flex;
     justify-content: space-evenly;
