--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -10,6 +10,8 @@ body {
 }
 
 .shadow{
-  box-shadow: 3px 4px 30px 5px rgba(138,133,138,1);
+  // box-shadow: 3px 4px 30px 5px rgba(138,133,138,1);
+  -webkit-box-shadow: 2px 3px 6px 2px rgba(0,0,0,0.3); 
+  box-shadow: 2px 3px 6px 2px rgba(0,0,0,0.3);
 }
 
