--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -19,7 +19,7 @@
     </section>
     <section id="form-section">
       <h2>Where do <em>you</em> want to go?</h2>
-      <!-- <form class="shadow">
+      <form class="shadow">
         <div id="dest-div">
           <label for="destination">Destination</label>
           <input id="destination" type="text">
@@ -29,10 +29,10 @@
           <input id="date" type="date">
         </div>
         <button id="search">Search</button>
-      </form> -->
+      </form>
       <div class="results shadow">
         <div class="results-image">
-          <h2 class="testHeader">Japan</h2>
+          <h2 class="locationHeader">Japan</h2>
         </div>
         <div class ="results-text">
           <!-- <h2 class="location">Japan</h2> -->
