Feat: Client updates the results card with response from the server
The client js now has a displayResult function that displays the results
from the query sent to the server using info from the form. The
location name, image and weather details are shown.

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -46,8 +46,8 @@
             <div class="weather-details">
               <h3>Scattered clouds</h3>
               <div class="temperature-details">
-                <img src="../media/static/temperature_icon.png">
-                <h4>15 / 7 &deg C </h4>
+                <img class="temperature-details-image" src="../media/static/temperature_icon.png">
+                <h4 class="temperature-details-temps">15 / 7 &deg C </h4>
               </div>
             </div>
           </div>
